--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ h2, h3 {
   color: var(--secondary);
 }
 
-a {
+a {handleClick
   color: var(--secondary);
   text-decoration: underline;
 }
@@ -77,6 +77,7 @@ a {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
+  border-color: var(--tertiary);
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
