--- a/src/index.css
+++ b/src/index.css
@@ -50,9 +50,13 @@ a {handleClick
 .project {
   border: 3px solid var(--tertiary);
   max-width: 1100px;
-  padding: 40px;
+  padding: 20px;
   margin: 30px auto;
   background-color: rgba(179, 0, 0, 0.1);
+  min-height: 275px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /*.project:hover {*/
