--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   /*font-family: 'Arial', sans-serif;*/
   font-family: "Lucida Console", "Courier New", monospace;
   text-align:center;
-  font-size: 19px;
+  font-size: 20px;
 }
 
 header, footer {
@@ -43,6 +43,16 @@ a {handleClick
   text-decoration: underline;
 }
 
+@media (max-width: 500px){
+  body{
+    font-size: 16px;
+  }
+  h1{
+    font-size: 40px;
+  }
+}
+
+
 /*a:hover {*/
 /*  text-decoration: underline;*/
 /*}*/
@@ -57,6 +67,7 @@ a {handleClick
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: left
 }
 
 /*.project:hover {*/
